--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -18,9 +18,8 @@
         android:textColor="@android:color/white"
         android:text="TextView" />
 
-    <Button
+    <ImageView
         android:id="@+id/selectColor"
-        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"      
         android:layout_centerHorizontal="true"
@@ -28,9 +27,8 @@
         android:layout_centerVertical="true"
         android:background="@drawable/select" />
 
-    <Button
+    <ImageView
         android:id="@+id/colorButton"
-        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
@@ -39,9 +37,8 @@
         android:layout_marginTop="@dimen/buttonverticalgap"
         android:layout_marginRight="@dimen/buttonverticalgap" />
 
-    <Button
+    <ImageView
         android:id="@+id/luminance"
-        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
@@ -50,9 +47,8 @@
         android:layout_marginTop="@dimen/buttonverticalgap"
         android:layout_marginRight="@dimen/buttonverticalgap"/>
 
-    <Button
+    <ImageView
         android:id="@+id/saturation"
-        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
@@ -61,9 +57,8 @@
         android:layout_marginTop="@dimen/buttonverticalgap"
         android:layout_marginRight="@dimen/buttonverticalgap"/>
 
-    <Button
+    <ImageView
         android:id="@+id/tolerance"
-        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
