--- a/res/layout/advanced_color_picker_fragment.xml
+++ b/res/layout/advanced_color_picker_fragment.xml
@@ -8,7 +8,7 @@
         android:background="@android:color/black"
         android:padding="20dp" >
 
-        <com.larswerkman.holocolorpicker.ColorPicker
+        <com.gnachury.library.ColorPicker
             android:id="@+id/color_picker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
